--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     </header>
 
     <div class="container">
-        <p>Свъжи се с нас:</p>
+        <p>Свържи се с нас:</p>
 
         <div class="details">
             <input type="text" class="input" placeholder="Име">
